# esp32c3-ada

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  alire.toml  esp32c3.gpr
.cargo/: config
esp_src/: esp-drivers-gpio.ads  esp-drivers-led_strip.ads  esp-drivers.ads  esp-error.ads  esp.adb  esp.ads
examples/: hello_world.rs
examples/empty/: app-main.adb
main/: main.c
rts/: ada_target_properties  rts.gpr  runtime.xml
rts/src/: s-macres.adb  s-memory.adb
src/: app.adb  app.ads  esp32c3.ads  lib.rs
tools/: build_sdk.sh  flash.sh  install_sdk.sh
