[package]
name = "esp32c3-ada"
version = "0.1.0"
authors = ["Johannes Kliemann <jk@jkliemann.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { git = "https://github.com/ducktec/esp32c3-hal.git", branch = "trunk" }
nb = "0.1.2"

[dev-dependencies]
esp32c-rt = "0.1.1"
panic-halt = "0.2"
